--- a/style.css
+++ b/style.css
@@ -203,19 +203,16 @@ i {
 
 #info-box {
   opacity: 0; 
-/*   overflow: hidden; */
   display: grid;
   grid-template-columns: 35% 65%;
   position: fixed;
   bottom: 10px;
   left: 50%;
-/*   padding: 20px; */
   transform: translateX(-50%);
   width: calc(100vw - 20px);
   height: 32vh;
   color: black;
   background: linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,1)); 
-/*   background-color: rgba(36,39,51,0.9); */
   border-radius: 8px;
   pointer-events: none;
   transition: opacity 0.2s ease-in-out;
@@ -230,16 +227,17 @@ i {
   display: inline-block;
   left: 0;
   margin: 20px;
-  width: calc(100% - 20px);
-  background-color: yellow;
+  width: calc(100% - 40px);
+  height: calc(100% - 40px);
   overflow: scroll;
+  background-color: yellow;
 }
 
 .adress {
   position: sticky;
   top: 0;
   width: 100%;
-  height: auto;
+  height: 55%;
   overflow: hidden;
 }
 
@@ -256,18 +254,17 @@ i {
 }
 
 #address_dong {
-  padding-bottom: 20px;
   font-size: 3.4rem;
 }
 
 #address_des {
-  position: relative;
-  top: 50%;
   font-size: 1rem;
-  width: 90%;
+  position: sticky;
+  top: 55%;
+  width: 100%;
+  height: 45%;
   pointer-events: auto;
-  overflow: scroll;
-  background-color: orange;
+  overflow: auto;
 }
 
 #info-right {
