--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@
   font-family: "source-han-sans-korean", sans-serif;
   font-weight: 400;
   font-style: normal;
+  
+  user-select: none;
 }
 
 #project-title, #project-info, #address_dong {
@@ -210,8 +212,8 @@ i {
   width: calc(100vw - 20px);
   height: 32vh;
   color: black;
-  background-color: rgba(255,255,255,0.8);
-/*   background: linear-gradient(rgba(255,255,255,0.6), rgba(255,255,255,1));  */
+/*   background-color: rgba(255,255,255,0.9); */
+  background: linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,1)); 
   border-radius: 8px;
   pointer-events: none;
   transition: opacity 0.2s ease-in-out;
