👆📡 Checkpoint ./style.css:55315810/519

--- a/style.css
+++ b/style.css
@@ -199,6 +199,11 @@ i {
   height: 100% !important; 
   background-color : #ffffff;
   z-index: 0;
+  
+  user-select: none;
+  -moz-user-select: none; /* Firefox 지원 */
+  -ms-user-select: none; /* IE 지원 */
+  -webkit-user-select: none; /* Webkit 브라우저 지원 (Safari, Chrome) */
 }
 
 #info-box {
