--- a/style.css
+++ b/style.css
@@ -7,24 +7,27 @@
   background: rgba(36, 39, 51, 0.4); /* 스크롤바의 색상 */
 }
 
-.wf-loading {
+
+.wf-loading div, .wf-loading h2, .wf-loading p{
   visibility: hidden;
 }
-.wf-active {
+
+.wf-active div, .wf-active h2, .wf-active p{
   visibility: visible;
 }
 
 * {
-  transition: opacity 1s;
-  font-family: "source-han-sans-korean", sans-serif;
+  font-family: 'Noto Sans KR', sans-serif;
+/*   font-family: "source-han-sans-korean", sans-serif; */
   font-weight: 400;
   font-style: normal;
-  font-display: block;
   
   user-select: none;
   -moz-user-select: none; /* Firefox 지원 */
   -ms-user-select: none; /* IE 지원 */
   -webkit-user-select: none; /* Webkit 브라우저 지원 (Safari, Chrome) */
+
+  transition: opacity 1s ease-in-out;
 }
 
 #project-title, #project-info, #address_dong {
@@ -32,6 +35,7 @@
   font-weight: 700;
   font-style: normal; 
   font-display: block;
+  visibility: visible;
 }
 
 :root {
