--- a/style.css
+++ b/style.css
@@ -121,14 +121,14 @@ body {
 .popup-h {
   font-family: "zw-mogujasusimgyeol", sans-serif;
   font-weight: 700;
-  margin-top: 90px;
+  margin-top: 80px;
   font-weight: 1000;
   font-size: 2rem;
 }
 
 .popup-img {
   width: 80%;
-  height: 290px;
+  height: 270px;
   background-image: url("https://cdn.glitch.global/4300c893-b7d0-43b8-97e2-45113b955d30/%E1%84%91%E1%85%AE%E1%86%BC%E1%84%89%E1%85%AE%E1%84%8C%E1%85%B5%E1%84%85%E1%85%B5%20%E1%84%89%E1%85%A9%E1%84%80%E1%85%A2_%E1%84%90%E1%85%AE%E1%84%86%E1%85%A7%E1%86%BC.png?v=1697808509606");
   background-size: contain;
   background-position: center;
@@ -139,10 +139,10 @@ body {
 }
 
 .popup-p {
-  width: 90%;
+  width: 88%;
   font-size: 0.94rem;
   line-height: 180%;
-/*   background-color: yellow; */
+  word-break: keep-all;
 }
 
 #popup-x {
@@ -275,6 +275,9 @@ i {
   pointer-events: auto;
   overflow: auto;
   color: #353535;
+  
+  line-height: 160%;
+  word-break: keep-all;
 }
 
 #info-right {
