--- a/style.css
+++ b/style.css
@@ -144,12 +144,12 @@ body {
   font-size: 0.94rem;
   line-height: 180%;
   word-break: keep-all;
+  padding-bottom: 100px;
 }
 
 #popup-x {
   position: absolute;
-  right: 0;
-  margin-right: 30px;
+  right: 30px;
   width: 20px;
   height: 20px;
   transform: scale(1.2);
